Fix semi-transparent check button on grid works covers.

--- a/MaterialSkin/HTML/material/html/css/style.css
+++ b/MaterialSkin/HTML/material/html/css/style.css
@@ -3766,6 +3766,7 @@ div.v-subheader {
 .check-btn {
  color:white;
  background-color:var(--primary-color)!important;
+ z-index:1; /* so that check is above work covers */
 }
 
 .check-btn:after {
